# SELF_Resigner_Linux

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  vcpkg.json
.github/workflows/: release.yml
build-asan/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  eboot_diff_tests-b12d07c_include.cmake  eboot_diff_tests-b12d07c_tests.cmake  imgui.ini
build-asan/Testing/Temporary/: CTestCostData.txt
cmake/: CPack.cmake  Dependencies.cmake  Install.cmake  Keystone.cmake
cmake/patches/: keystone-cmake.patch
docs/: eboot_diff.md
res/: eboot_diff.desktop.in  keys
scripts/: qa_strace.sh  qa_valgrind.sh
src/: resigner.bat  resigner.cpp
src/eboot_diff/: application.cpp  application.hpp  main.cpp
src/eboot_diff/domain/: error.hpp  project.cpp  project.hpp  types.cpp  types.hpp
src/eboot_diff/services/: address_index.cpp  address_index.hpp  assembler.cpp  assembler.hpp  diff_controller.cpp  diff_controller.hpp  diff_engine.cpp  diff_engine.hpp  disassembler.cpp  disassembler.hpp  eboot_loader.cpp  eboot_loader.hpp  export_service.cpp  export_service.hpp  patch_service.cpp  patch_service.hpp  project_service.cpp  project_service.hpp
src/eboot_diff/ui/: diff_pane.cpp  diff_pane.hpp  file_dialogs.cpp  file_dialogs.hpp  imgui_theme.cpp  imgui_theme.hpp  main_window.cpp  main_window.hpp
src/eboot_diff/util/: app_paths.cpp  app_paths.hpp  branding.hpp  logger.cpp  logger.hpp  window_icon.cpp  window_icon.hpp
src/ps3/binary/: endian.hpp
src/ps3/elf/: image.cpp  image.hpp  patcher.cpp  patcher.hpp
src/ps3/fself/: builder.cpp  builder.hpp  extractor.cpp  extractor.hpp
src/ps3/np/: klicense_bruteforce.cpp  klicense_bruteforce.hpp
src/resigner/: application.cpp  application.hpp  console.cpp  console.hpp  eboot_service.cpp  eboot_service.hpp  filesystem.cpp  filesystem.hpp  klicense_service.cpp  klicense_service.hpp  menu.cpp  menu.hpp  sce_operations.cpp  sce_operations.hpp  self_service.cpp  self_service.hpp  self_types.hpp  settings.cpp  settings.hpp
src/tool/: FixELF.cpp  FixELF.hpp
src/tool/scetool_source/: config.h  sce.cpp  scetool.cpp  scetool.hpp  scetool_api.cpp  util.cpp
tests/eboot_diff/: address_index_test.cpp  asm_roundtrip_test.cpp  diff_engine_test.cpp  disasm_real_test.cpp  disasm_test.cpp  elf_image_test.cpp  patch_service_test.cpp  profile_load.cpp  project_service_test.cpp  test_elf_fixture.hpp
